Implement increasing weighted loss

--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -13,13 +13,13 @@
      "output_type": "stream",
      "text": [
       "env: CUDA_DEVICE_ORDER=PCI_BUS_ID\n",
-      "env: CUDA_VISIBLE_DEVICES=1\n"
+      "env: CUDA_VISIBLE_DEVICES=3\n"
      ]
     }
    ],
    "source": [
     "%env CUDA_DEVICE_ORDER=PCI_BUS_ID\n",
-    "%env CUDA_VISIBLE_DEVICES=1"
+    "%env CUDA_VISIBLE_DEVICES=3"
    ]
   },
   {
@@ -270,9 +270,119 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "e631499a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='100' max='100' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [100/100 05:09]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'eval_loss': 8.471336364746094,\n",
+       " 'eval_rouge1': 0.3672,\n",
+       " 'eval_rouge2': 0.1566,\n",
+       " 'eval_rougeL': 0.2573,\n",
+       " 'eval_rougeLsum': 0.2988,\n",
+       " 'eval_gen_len': 69.594,\n",
+       " 'eval_runtime': 316.1945,\n",
+       " 'eval_samples_per_second': 3.163,\n",
+       " 'eval_steps_per_second': 0.316}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# model\n",
+    "model_ckpt = './checkpoints2023-05-06T16:43:22.416287/'\n",
+    "model = AutoModelForSeq2SeqLM.from_pretrained(model_ckpt)\n",
+    "\n",
+    "training_args = Seq2SeqTrainingArguments(\n",
+    "    output_dir=\"BART\",\n",
+    "    evaluation_strategy=\"epoch\",\n",
+    "    learning_rate=2e-5,\n",
+    "    per_device_train_batch_size=2,\n",
+    "    per_device_eval_batch_size=10,\n",
+    "    weight_decay=0.01,\n",
+    "    save_total_limit=3,\n",
+    "    num_train_epochs=4,\n",
+    "    predict_with_generate=True,\n",
+    "    fp16=True,\n",
+    ")\n",
+    "\n",
+    "trainer = Seq2SeqTrainer(\n",
+    "    model=model,\n",
+    "    args=training_args,\n",
+    "    tokenizer=tokenizer,\n",
+    "    data_collator=data_collator,\n",
+    "    compute_metrics=compute_metrics,\n",
+    ")\n",
+    "\n",
+    "metrics = trainer.evaluate(tokenized_test.select(range(1000)))\n",
+    "metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "a89a2ae2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='785' max='1149' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [ 785/1149 45:25 < 21:05, 0.29 it/s]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'eval_loss': 6.863325595855713,\n",
+       " 'eval_rouge1': 0.4618,\n",
+       " 'eval_rouge2': 0.2235,\n",
+       " 'eval_rougeL': 0.32,\n",
+       " 'eval_rougeLsum': 0.3912,\n",
+       " 'eval_gen_len': 74.1923,\n",
+       " 'eval_runtime': 4150.6028,\n",
+       " 'eval_samples_per_second': 2.768,\n",
+       " 'eval_steps_per_second': 0.277}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# model\n",
     "model_ckpt = './checkpoints2023-05-06T13:00:32.263295'\n",
@@ -305,8 +415,241 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c15bbf50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You're using a BartTokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='266' max='1149' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [ 266/1149 14:58 < 49:53, 0.29 it/s]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'eval_loss': 7.3013129234313965,\n",
+       " 'eval_rouge1': 0.4576,\n",
+       " 'eval_rouge2': 0.2227,\n",
+       " 'eval_rougeL': 0.3167,\n",
+       " 'eval_rougeLsum': 0.3871,\n",
+       " 'eval_gen_len': 77.4565,\n",
+       " 'eval_runtime': 4409.3738,\n",
+       " 'eval_samples_per_second': 2.606,\n",
+       " 'eval_steps_per_second': 0.261}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# model\n",
+    "model_ckpt = './checkpoints2023-05-12T20:18:24.824529/'\n",
+    "model = AutoModelForSeq2SeqLM.from_pretrained(model_ckpt)\n",
+    "\n",
+    "training_args = Seq2SeqTrainingArguments(\n",
+    "    output_dir=\"BART\",\n",
+    "    evaluation_strategy=\"epoch\",\n",
+    "    learning_rate=2e-5,\n",
+    "    per_device_train_batch_size=2,\n",
+    "    per_device_eval_batch_size=10,\n",
+    "    weight_decay=0.01,\n",
+    "    save_total_limit=3,\n",
+    "    num_train_epochs=4,\n",
+    "    predict_with_generate=True,\n",
+    "    fp16=True,\n",
+    ")\n",
+    "\n",
+    "trainer = Seq2SeqTrainer(\n",
+    "    model=model,\n",
+    "    args=training_args,\n",
+    "    tokenizer=tokenizer,\n",
+    "    data_collator=data_collator,\n",
+    "    compute_metrics=compute_metrics,\n",
+    ")\n",
+    "\n",
+    "metrics = trainer.evaluate(tokenized_test)\n",
+    "metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b0218f94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You're using a BartTokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='272' max='1149' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [ 272/1149 17:03 < 55:12, 0.26 it/s]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'eval_loss': 7.935605525970459,\n",
+       " 'eval_rouge1': 0.4604,\n",
+       " 'eval_rouge2': 0.2261,\n",
+       " 'eval_rougeL': 0.3164,\n",
+       " 'eval_rougeLsum': 0.4293,\n",
+       " 'eval_gen_len': 87.524,\n",
+       " 'eval_runtime': 4951.5594,\n",
+       " 'eval_samples_per_second': 2.32,\n",
+       " 'eval_steps_per_second': 0.232}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# model\n",
+    "model_ckpt = './checkpoints2023-05-14T18:15:05.361400/'\n",
+    "model = AutoModelForSeq2SeqLM.from_pretrained(model_ckpt)\n",
+    "\n",
+    "training_args = Seq2SeqTrainingArguments(\n",
+    "    output_dir=\"BART\",\n",
+    "    evaluation_strategy=\"epoch\",\n",
+    "    learning_rate=2e-5,\n",
+    "    per_device_train_batch_size=2,\n",
+    "    per_device_eval_batch_size=10,\n",
+    "    weight_decay=0.01,\n",
+    "    save_total_limit=3,\n",
+    "    num_train_epochs=4,\n",
+    "    predict_with_generate=True,\n",
+    "    fp16=True,\n",
+    ")\n",
+    "\n",
+    "trainer = Seq2SeqTrainer(\n",
+    "    model=model,\n",
+    "    args=training_args,\n",
+    "    tokenizer=tokenizer,\n",
+    "    data_collator=data_collator,\n",
+    "    compute_metrics=compute_metrics,\n",
+    ")\n",
+    "\n",
+    "metrics = trainer.evaluate(tokenized_test)\n",
+    "metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "df919bec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='758' max='1149' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [ 758/1149 48:02 < 24:48, 0.26 it/s]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'eval_loss': 8.115837097167969,\n",
+       " 'eval_rouge1': 0.4597,\n",
+       " 'eval_rouge2': 0.2255,\n",
+       " 'eval_rougeL': 0.3175,\n",
+       " 'eval_rougeLsum': 0.4295,\n",
+       " 'eval_gen_len': 86.2607,\n",
+       " 'eval_runtime': 4619.5407,\n",
+       " 'eval_samples_per_second': 2.487,\n",
+       " 'eval_steps_per_second': 0.249}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# model\n",
+    "model_ckpt = './checkpoints2023-05-14T19:42:34.263202/'\n",
+    "model = AutoModelForSeq2SeqLM.from_pretrained(model_ckpt)\n",
+    "\n",
+    "training_args = Seq2SeqTrainingArguments(\n",
+    "    output_dir=\"BART\",\n",
+    "    evaluation_strategy=\"epoch\",\n",
+    "    learning_rate=2e-5,\n",
+    "    per_device_train_batch_size=2,\n",
+    "    per_device_eval_batch_size=10,\n",
+    "    weight_decay=0.01,\n",
+    "    save_total_limit=3,\n",
+    "    num_train_epochs=4,\n",
+    "    predict_with_generate=True,\n",
+    "    fp16=True,\n",
+    ")\n",
+    "\n",
+    "trainer = Seq2SeqTrainer(\n",
+    "    model=model,\n",
+    "    args=training_args,\n",
+    "    tokenizer=tokenizer,\n",
+    "    data_collator=data_collator,\n",
+    "    compute_metrics=compute_metrics,\n",
+    ")\n",
+    "\n",
+    "metrics = trainer.evaluate(tokenized_test)\n",
+    "metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "350f242d",
    "metadata": {},
    "outputs": [],
    "source": []
